chore: Update dependencies and fix dark mode styles

--- a/src/dark-mode-styles.css
+++ b/src/dark-mode-styles.css
@@ -11,5 +11,6 @@
       0 1.6px 5.3px rgb(0 0 0 / 12.8%), 0 3px 10px rgb(0 0 0 / 13.5%),
       0 5.4px 17.9px rgb(0 0 0 / 14.2%), 0 10px 33.4px hsl(0deg 0 9% / 15.1%),
       0 24px 80px hsl(0deg 0 9% / 17.1%);
+    --filter: drop-shadow(2px 2px 8px rgb(0 0 0 / 35%))
   }
 }
